--- a/components/header/headerComponent.css
+++ b/components/header/headerComponent.css
@@ -1,6 +1,6 @@
 .div {
     height: 40px;
-    width: 40px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
