--- a/components/seccion1/seccion1Component.css
+++ b/components/seccion1/seccion1Component.css
@@ -2,10 +2,11 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 2rem;
+    gap: 2rem ;
 
     margin-top: 2rem;
 
     justify-items: center;
-    
+    padding-bottom: 120px;
 }
+
