--- a/components/header/headerComponent.css
+++ b/components/header/headerComponent.css
@@ -1,18 +1,24 @@
-.div {
-    height: 40px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 40px;
-}
+header {
+    height: 6rem;
+    border-bottom: 1px solid gray;
+    padding: 0 2rem;
 
-.header {
     display: grid;
     grid-template-columns: 1fr auto;
     align-items: center;
-
-    border-bottom: 1px solid gray;
-    padding: 1rem;
 }
 
+.titulo {
+    font-size: 1.5rem;
+}
+
+.div-logo {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 5px;
+
+    font-size: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
