--- a/components/nav/navComponent.css
+++ b/components/nav/navComponent.css
@@ -2,41 +2,37 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    border: 1px solid black;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    height:  100px;
+
     width: 100%;
+    height: 8rem;
     background-color: white;
+    border-top: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 5rem;
+    z-index: 1000;
 }   
 
-.div {
-    cursor: pointer;
-    padding: 1.8rem;
+.cuadros {
+    padding: 1.5rem;
     margin: 2rem;
-    
+    font-size: 2.5rem;
+    text-decoration: none;
 }
 
-.div-car{
-    cursor: pointer;
-    padding: 1.8rem;
-    margin: 2rem;
-    position: relative;
-    font-size: 40px;
-}
 .div-item {
-    position: absolute;
-    top: 18px;
-    right: 20px;
+    width:  20px;
+    height: 20px;
     border-radius: 100%;
-    background-color: rgb(255, 0, 0);
+    background-color: red;
     color: white;
-    width: 25px;
-    height: 25px;
-    font-size: 20px;
+    font-size: 18px;
+    position: absolute;
+    top: 20px;
+    right: 30px;
+
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 }
