--- a/config.css
+++ b/config.css
@@ -2,12 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-.ocultar {
-    display: none;
+    cursor: pointer;
 }
 
 html {
-    font-family: 'Times New Roman', Times, serif;
+    font-size: 12px;
+    font-family: monospace;
 }
+
+
+
+
+
+
